fixed the spacing finally

--- a/test.css
+++ b/test.css
@@ -88,7 +88,7 @@ a {
  * Header
  */
 .panel-header {
-  margin: 120px auto 55px;
+  margin: 0px auto 55px;
 }
 
 .title {
